--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://yarwarr.github.io/social-client",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -25,6 +26,9 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    
     
     "start": "react-scripts start",
     "build": "react-scripts build",
