--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "./",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -13,10 +13,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
+    "filestack-react": "^4.0.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.0",
     "react-r": "^2.0.0-rc02",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
@@ -26,7 +28,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
